<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:paddingTop="50dp"
    android:layout_margin="16dp">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imgEmpty"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/no_info"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@id/txvNoInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txvOops"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/opps"
        android:textAlignment="center"
        android:textSize="27dp"
        android:textColor="@color/blue_gray_oishii"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txvNoInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_data_available"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvOops"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txvRefresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/swipe_refresh"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/yellow_oishii"
        app:layout_constraintTop_toBottomOf="@id/txvNoInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>